# fastapi-implementation

./: .gitignore  Dockerfile  docker-compose.yml  plan.md  prometheus.yml  pyproject.toml
src/: main.py
src/api/: dependencies.py
src/api/v1/: auth.py  users.py
src/core/: config.py  database.py  exceptions.py  security.py
src/models/: user.py
src/repositories/: base.py  user.py
src/schemas/: user.py
src/services/: user.py
src/worker/: celery_app.py
