[project]
name = "fastapi-best-practices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "cryptography>=48.0.1",
    "fastapi>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-fastapi-instrumentator>=8.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
